--- a/index.html
+++ b/index.html
@@ -2,9 +2,55 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>tema3</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <h1 style="color: red;">Hello World</h1>
+        <hr />
+        <h1 class="titlu2">Hello lume</h1>
+        <h2>hello</h2>
+        <img src="oradea.jpg" alt="Poza cu centru Oradea">
+        <a href="http://google.com">gooogle</a>
+        <a href="http://"></a>
+        <input type="text">
+        <input type="text">
+        <p>gigi</p>
+        <ul>
+            <li>Branza</li>
+            <li>Cascaval</li>
+        </ul>
+        <button class="buton">apasama</button>
+        <ol class="lista1">
+            <li>Branza</li>
+            <li>Cascaval</li>
+        </ol>
+        <button class="buton2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
+                <path d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z"/>
+              </svg>
+              Google
+        </button>
+        <nav>
+            <ul>
+                <a href="https://www.google.com/maps/@47.0297259,21.9517113,14z?entry=ttu" target="_blank">Google maps</a>
+            </ul>
+        </nav>
+        
+          <p class="x">
+            <svg  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1"/>
+              </svg>
+              15.65%
+              Since Last month
+          </p>
+        <p>hellooooooooooooo</p>
+
     
 </body>
+<footer>
+    <p>
+        gigi
+    </p>
+</footer>
 </html>
